# FastTrading

./: .gitignore  README.md  docker-compose.dev.yml  docker-compose.full.yml  docker-compose.yml  fdd.txt
.github/workflows/: cd.yaml  ci.yaml
backend/: Dockerfile  init.sql  requirements.txt
backend/app/: __init__.py  config.py  database.py  main.py
backend/app/api/: deps.py  router.py
backend/app/api/endpoints/: analytics.py  auth.py  market.py  orders.py  trades.py  wallets.py
backend/app/models/: __init__.py  base.py  order.py  trade.py  user.py  wallet.py
backend/app/schemas/: __init__.py  analytics.py  market.py  order.py  trade.py  user.py  wallet.py
backend/app/services/: __init__.py  ai_analytics.py  auth.py  market.py  trading.py  wallet.py
backend/app/websocket/: __init__.py  handlers.py  manager.py
backend/migrations/: 001_initial.sql
backend/tests/: test_trading.py
frontend/: Dockerfile  next.config.js  package.json  tailwind.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend/src/components/analytics/: AIAnalyticsDashboard.tsx  AnomalyAlerts.tsx  MarketSentiment.tsx  PortfolioInsights.tsx  PricePredictions.tsx  RiskScoreCard.tsx  index.ts
frontend/src/components/layout/: Header.tsx
frontend/src/components/market/: MarketOverview.tsx
frontend/src/components/trading/: OrderBook.tsx  OrderForm.tsx  RecentTrades.tsx  TradingView.tsx  UserOrders.tsx
frontend/src/hooks/: useAnalytics.ts  useMarketData.ts  useOrders.ts
frontend/src/lib/: api.ts  websocket.ts
k8s/base/: configmap.yaml  namespace.yaml  secrets.yaml
k8s/monitoring/: grafana.yaml  prometheus.yaml
k8s/services/: api-gateway.yaml  frontend.yaml  matching-engine.yaml
monitoring/: prometheus.yml
nginx/: nginx.conf
rust-services/: Cargo.toml
rust-services/common/: Cargo.toml
rust-services/common/src/: error.rs  events.rs  lib.rs  types.rs
rust-services/data-pipeline/: Cargo.toml
rust-services/data-pipeline/src/: aggregator.rs  cache.rs  config.rs  consumer.rs  main.rs  publisher.rs
rust-services/exchange-gateway/: Cargo.toml
rust-services/exchange-gateway/src/: api.rs  config.rs  main.rs  router.rs
rust-services/exchange-gateway/src/adapters/: binance.rs  mod.rs  traits.rs  uniswap.rs
rust-services/matching-engine/: Cargo.toml  Dockerfile
rust-services/matching-engine/benches/: matching.rs
rust-services/matching-engine/src/: api.rs  config.rs  engine.rs  kafka.rs  lib.rs  main.rs  metrics.rs  orderbook.rs
terraform/: main.tf  outputs.tf  variables.tf
terraform/environments/: production.tfvars
