[workspace]
members = [
    "matching-engine",
    "data-pipeline",
    "exchange-gateway",
    "common",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["FastTrading Team"]
license = "MIT"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full", "tracing"] }
tokio-stream = "0.1"

# Web framework
axum = { version = "0.7", features = ["ws", "tracing"] }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "trace", "compression-gzip"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "uuid", "chrono", "rust_decimal"] }
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }

# Messaging
rdkafka = { version = "0.36", features = ["cmake-build"] }
lapin = "2.3"  # RabbitMQ

# Crypto/Blockchain
ethers = { version = "2.0", features = ["rustls", "ws"] }

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-opentelemetry = "0.22"
opentelemetry = "0.21"
opentelemetry_sdk = { version = "0.21", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.14", features = ["tonic"] }
metrics = "0.22"
metrics-exporter-prometheus = "0.13"

# Utils
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
rust_decimal = { version = "1.33", features = ["serde", "serde-with-str"] }
thiserror = "1.0"
anyhow = "1.0"
config = "0.14"
dotenvy = "0.15"

# Data structures
dashmap = "5.5"
crossbeam = "0.8"
parking_lot = "0.12"

# Testing
tokio-test = "0.4"
criterion = { version = "0.5", features = ["async_tokio"] }

