[package]
name = "matching-engine"
version.workspace = true
edition.workspace = true

[dependencies]
common = { path = "../common" }

tokio.workspace = true
tokio-stream.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true

serde.workspace = true
serde_json.workspace = true

sqlx.workspace = true
redis.workspace = true
rdkafka.workspace = true

tracing.workspace = true
tracing-subscriber.workspace = true
tracing-opentelemetry.workspace = true
opentelemetry.workspace = true
opentelemetry-otlp.workspace = true
metrics.workspace = true
metrics-exporter-prometheus.workspace = true

uuid.workspace = true
chrono.workspace = true
rust_decimal.workspace = true
thiserror.workspace = true
anyhow.workspace = true
config.workspace = true
dotenvy.workspace = true

dashmap.workspace = true
crossbeam.workspace = true
parking_lot.workspace = true

[dev-dependencies]
tokio-test.workspace = true
criterion.workspace = true

[[bench]]
name = "matching"
harness = false

